chore: добавлены важные для фронта вьюхи
